[gd_scene load_steps=6 format=2]

[ext_resource path="res://entity/foes/FoeFactory.gd" type="Script" id=1]
[ext_resource path="res://entity/foes/MonsterBarrel.tscn" type="PackedScene" id=2]
[ext_resource path="res://entity/foes/MonsterZombie.tscn" type="PackedScene" id=3]
[ext_resource path="res://entity/foes/MonsterGun.tscn" type="PackedScene" id=4]
[ext_resource path="res://entity/foes/MonsterJump.tscn" type="PackedScene" id=5]

[node name="FoeFactory" type="Node"]

script = ExtResource( 1 )

[node name="MonsterBarrel" parent="." index="0" instance=ExtResource( 2 )]

[node name="MonsterZombie" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 160, 0 )

[node name="MonsterGun" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 320, 0 )

[node name="MonsterJump" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 480, 0 )


